<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="enter_distance_meter">Enter distance (meter)</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="clear">CLEAR</string>
    <string name="calculate">CALCULATE</string>
    <string name="average_speed_km_h">Average Speed (km/h)</string>
    <string name="d_a_t_aer_required">Distance and Time are required</string>
    <string name="more_than_zreo">Time Must be greater than zero</string>

    <string name="speed_over">Speed is over limit!</string>

    <string name="limit">Speed is over limit!</string>
</resources>